[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Attention Is All You Need implementation from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.1",
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.1",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
